--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,13 @@ version: "3.9"
 
 services:
   jenkins:
-    image: jenkins/jenkins:alpine-jdk11
+    # image: jenkins/jenkins:alpine-jdk11
+    build: ./jenkins-build
     ports:
       - 8080:8080
       - 50000:50000
     environment:
-      # JAVA_OPTS: -Djenkins.install.runSetupWizard=false
+      JAVA_OPTS: -Djenkins.install.runSetupWizard=false
       JENKINS_OPTS: --argumentsRealm.roles.user=admin --argumentsRealm.passwd.admin=admin --argumentsRealm.roles.admin=admin
 
   #nginx_tst:
